volviendo a la version inicial

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,13 @@ body,html{
 }
 
 body{
-    background: radial-gradient(circle, rgba(63,94,251,0.6) 0%, rgba(252,70,107,1) 100%),url(../img/stitch.jpg);
+    background: radial-gradient(circle, rgba(63,94,251,0.6) 0%, rgba(252,70,107,1) 100%),url(../img/fornite1.jpg);
     background-size: cover;
     background-position: center;
     color: #fff;
     background-image: linear-gradient;
 }
 h1{
-    font-family: 'Open Sans', sans-serif;
     color: #fff;
 }
 
@@ -23,7 +22,7 @@ h1{
 }
 
 .logo {
-    height: 100px;
+    height: 30px;
     margin-top: 20px;
 }
 
@@ -41,7 +40,4 @@ a .fab{
     color: #ffc;
     font-size:  30px;
     margin: 0 10px;
-}
-p{
-    color: #fff;
 }
